server/zanata-frontend/src/app/styles/gwt.less
/* GWT overrides */

.new-zanata {
  .bg--pop-highest {
    border: none;
  }
  h1 {
    height: 1.1em;
  }
  .h1, h1 {
    font-weight: 500 !important;
  }
  .g {
    align-self: center;
    padding-bottom: 1rem;
  }
  .panel {
    background-color: #fdfdfd;
    border: 1px solid rgba(32, 113, 138, 0.15) !important;
  }
  .panel__header {
    border-width: 1px !important;
  }
  .panel__results--bottom {
    border-top: none !important;
  }
  #project-info h1 {
    height: auto;
  }
  button.close {
    -webkit-box-shadow: none;
    box-shadow: none;
    background-color: transparent;
    border: none;
    outline: none;
    padding: 0.75rem;
  }
  .bg--pop-highest thead, &.bg--pop-highest tbody {
    border: 1px solid rgba(32, 113, 138, 0.15);
  }
  .l-wrapper {
    align-items: center;
    -webkit-align-items: center;
    /* Safari 7.0+ */
    display: inherit;
  }
  .g--centered {
    text-align: center;
    width: 100%;
  }
  #versionAutocomplete .autocomplete__results {
    position: relative;
    margin-top: -1rem;
  }
  .button--group input[type=radio]:checked+.button--Off, .button--group input[type=radio]:checked+.button--Off:hover {
    background-color: #546677 !important;
    color: #f7f7f7 !important;
  }
  .button--group input[type=radio]:checked+.button--danger, .button--group input[type=radio]:checked+.button--danger:hover {
    color: #f7f7f7 !important;
  }
  label {
    color: #546677 !important;
  }
  .panel__results__type i.i.txt--neutral.i--users {
    vertical-align: super;
  }
  .panel__results .txt--meta {
    color: #BDD4DC;
  }
  /* Fix for Search and Replace in GWT */
  table .projectWideSearchResultsDocumentBody {
    display: table !important;
  }
  // Bugfix for a container, do not remove
  .GNM0BIKDBN {
    min-width: unset;
  }
  // GWT cancel buttons at bottom of pages
  form .button.button--link {
    padding: 0.1875em 0.75em
  }
  #cacheStatisticsTable {
    overflow: auto;
    overflow-x: scroll;
    width: 48rem;
    font-size: 0.875rem;
  }
  .panel__results--bottom .panel__results__type {
    top: 0.2rem;
  }
  select {
    width: inherit !important;
  }
  .gwt-DialogBox-CloseButton {
    position: relative;
    bottom: -4px;
    right: 5px;
    float: right;
    clear: both;
    width: 5%;
    margin-left: 95%;
  }
  .revision__box {
    display: flex !important;
    padding: 10px !important;
  }

  #gwt-debug-transHistoryTabPanel .gwt-TabLayoutPanelContent {
    overflow-x: hidden !important;
  }
  #gwt-debug-transHistoryTabPanel .gwt-TabLayoutPanelContent .g--tight {
    margin: 0 !important;
  }
  .gwt-DialogBox {
    padding-right: 15px;
  }
  .resultTable, .transUnitTable {
    margin: 0;
  }
  .resultTable button {
    padding: 0.1875em 0.375em !important;
  }
  .gwt-TabLayoutPanelContent table {
    margin: auto;
  }
  .button--small {
    padding: 0.21429em 0.42857em !important;
  }
  #gwt-debug-transHistoryTabPanel .gwt-TabLayoutPanelContent .gwt-InlineHTML .l--pad-v-half {
    margin-top: 5px;
    margin-bottom: 5px;
    min-height: 1em;
    word-wrap: break-word;
    white-space: pre-wrap;
  }
}

